src/objects/Training_Path__c.object
<CustomObject>
    <fields>
        <fullName>Badge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Badge</label>
        <referenceTo>Badge__c</referenceTo>
        <relationshipLabel>Training Paths</relationshipLabel>
        <relationshipName>Training_Paths</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Step_Count__c</fullName>
        <label>Step Count</label>
        <summaryForeignKey>Training_Step__c.Training_Path__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Training Path</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Training Path Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Paths</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>